build decoder component of the autoencoder

--- a/source/class_autoencoder.ipynb
+++ b/source/class_autoencoder.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "alleged-hormone",
+   "execution_count": 23,
+   "id": "foreign-uruguay",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from tensorflow.keras import Model\n",
-    "from tensorflow.keras.layers import Input, Conv2D, ReLU, BatchNormalization, Flatten, Dense, Reshape, Conv2DTranspose\n",
+    "from tensorflow.keras.layers import Input, Conv2D, ReLU, BatchNormalization, Flatten, Dense, Reshape, Conv2DTranspose, Activation\n",
     "from tensorflow.keras import backend as K\n",
     "%config Completer.use_jedi = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "patent-bible",
+   "execution_count": 28,
+   "id": "specialized-zoning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +50,72 @@
     "        \n",
     "    def summary(self):\n",
     "        self.encoder.summary()\n",
+    "        self.decoder.summary()\n",
     "        \n",
     "    def _build(self):\n",
     "        self._build_encoder()\n",
-    "        #self._build_decoder()\n",
+    "        self._build_decoder()\n",
     "        #self._build_autoencoder()\n",
     "    \n",
+    "    # DECODER ===============================================================\n",
+    "    def _build_decoder(self):\n",
+    "        decoder_input = self._add_decoder_input()\n",
+    "        dense_layer = self._add_dense_layer(decoder_input)\n",
+    "        reshape_layer = self._add_reshape_layer(dense_layer)\n",
+    "        conv_transpose_layers = self._add_conv_transpose_layers(reshape_layer)\n",
+    "        decoder_output = self._add_decoder_output(conv_transpose_layers)\n",
+    "        self.decoder = Model(decoder_input, decoder_output, name=\"decoder\")\n",
+    "    \n",
+    "    def _add_decoder_input(self):\n",
+    "        return Input(shape=self.latent_space_dim, name=\"decoder_input\")\n",
+    "    \n",
+    "    def _add_dense_layer(self, decoder_input):\n",
+    "        num_neurons = np.prod(self._shape_before_bottleneck)   # [1, 2, 4] --> 8 (flatten)\n",
+    "        dense_layer = Dense(num_neurons, name=\"decoder_dense\")(decoder_input)\n",
+    "        return dense_layer\n",
+    "    \n",
+    "    def _add_reshape_layer(self, dense_layer):\n",
+    "        return Reshape(target_shape=self._shape_before_bottleneck)(dense_layer)\n",
+    "    \n",
+    "    def _add_conv_transpose_layers(self, x):\n",
+    "        \"\"\"\n",
+    "        Add convolutional transpose blocks.\n",
+    "        \"\"\"\n",
+    "        # loop through all the conv layers in the reverse order and stop at the first layer\n",
+    "        # (i.e., mirror the conv layers of the encoder)\n",
+    "        for layer_index in reversed(range(1, self._num_conv_layers)):\n",
+    "            # Assume three conv layers in the encoder [0, 1, 2] --> decoder [2, 1, 0]\n",
+    "            # Goal: [1, 2] --> [2, 1]\n",
+    "            x = self._add_conv_transpose_layer(layer_index, x)\n",
+    "        return x\n",
+    "    \n",
+    "    def _add_conv_transpose_layer(self, layer_index, x):\n",
+    "        layer_num = self._num_conv_layers - layer_index\n",
+    "        conv_transpose_layer = Conv2DTranspose(\n",
+    "            filters=self.conv_filters[layer_index],\n",
+    "            kernel_size=self.conv_kernels[layer_index],\n",
+    "            strides=self.conv_strides[layer_index],\n",
+    "            padding=\"same\",\n",
+    "            name=f\"decoder_conv_transpose_layer_{layer_num}\"\n",
+    "        )\n",
+    "        x = conv_transpose_layer(x)\n",
+    "        x = ReLU(name=f\"decoder_relu_{layer_num}\")(x)\n",
+    "        x = BatchNormalization(name=f\"decoder_bn_{layer_num}\")(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def _add_decoder_output(self, x):\n",
+    "        conv_transpose_layer = Conv2DTranspose(\n",
+    "            filters=1,  # [24, 24, 1] image shape with 1 channel\n",
+    "            kernel_size=self.conv_kernels[0], \n",
+    "            strides=self.conv_strides[0],\n",
+    "            padding=\"same\",\n",
+    "            name=f\"decoder_conv_transpose_layer_{self._num_conv_layers}\"\n",
+    "        )\n",
+    "        x = conv_transpose_layer(x)\n",
+    "        output_layer = Activation(\"sigmoid\", name=\"sigmoid_layer\")(x)\n",
+    "        return output_layer\n",
+    "    \n",
+    "    # ENCODER ===============================================================\n",
     "    def _build_encoder(self):\n",
     "        encoder_input = self._add_encoder_input()\n",
     "        conv_layers = self._add_conv_layers(encoder_input)\n",
@@ -104,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "comparable-bangladesh",
+   "execution_count": 29,
+   "id": "faced-sellers",
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +202,49 @@
       "_________________________________________________________________\n",
       "encoder_bn_4 (BatchNormaliza (None, 7, 7, 64)          256       \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 3136)              0         \n",
+      "flatten_4 (Flatten)          (None, 3136)              0         \n",
       "_________________________________________________________________\n",
       "encoder_output (Dense)       (None, 2)                 6274      \n",
       "=================================================================\n",
       "Total params: 99,842\n",
       "Trainable params: 99,394\n",
       "Non-trainable params: 448\n",
+      "_________________________________________________________________\n",
+      "Model: \"decoder\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "decoder_input (InputLayer)   [(None, 2)]               0         \n",
+      "_________________________________________________________________\n",
+      "decoder_dense (Dense)        (None, 3136)              9408      \n",
+      "_________________________________________________________________\n",
+      "reshape_2 (Reshape)          (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 7, 7, 64)          36928     \n",
+      "_________________________________________________________________\n",
+      "decoder_relu_1 (ReLU)        (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "decoder_bn_1 (BatchNormaliza (None, 7, 7, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 14, 14, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "decoder_relu_2 (ReLU)        (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "decoder_bn_2 (BatchNormaliza (None, 14, 14, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 28, 28, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "decoder_relu_3 (ReLU)        (None, 28, 28, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "decoder_bn_3 (BatchNormaliza (None, 28, 28, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 28, 28, 1)         577       \n",
+      "_________________________________________________________________\n",
+      "sigmoid_layer (Activation)   (None, 28, 28, 1)         0         \n",
+      "=================================================================\n",
+      "Total params: 121,537\n",
+      "Trainable params: 121,153\n",
+      "Non-trainable params: 384\n",
       "_________________________________________________________________\n"
      ]
     }
@@ -170,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deluxe-cambodia",
+   "id": "afraid-ebony",
    "metadata": {},
    "outputs": [],
    "source": []
