add methods to save and reload autoencoder model

--- a/source/train.ipynb
+++ b/source/train.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "clinical-start",
+   "execution_count": 3,
+   "id": "educated-marsh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "tracked-injury",
+   "execution_count": 7,
+   "id": "racial-lightweight",
    "metadata": {
     "scrolled": false
    },
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "lyric-sacramento",
+   "execution_count": 8,
+   "id": "formed-canvas",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
       "_________________________________________________________________\n",
       "encoder_bn_4 (BatchNormaliza (None, 7, 7, 64)          256       \n",
       "_________________________________________________________________\n",
-      "flatten_8 (Flatten)          (None, 3136)              0         \n",
+      "flatten_2 (Flatten)          (None, 3136)              0         \n",
       "_________________________________________________________________\n",
       "encoder_output (Dense)       (None, 2)                 6274      \n",
       "=================================================================\n",
@@ -107,7 +107,7 @@
       "_________________________________________________________________\n",
       "decoder_dense (Dense)        (None, 3136)              9408      \n",
       "_________________________________________________________________\n",
-      "reshape_6 (Reshape)          (None, 7, 7, 64)          0         \n",
+      "reshape_2 (Reshape)          (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
       "decoder_conv_transpose_layer (None, 7, 7, 64)          36928     \n",
       "_________________________________________________________________\n",
@@ -150,45 +150,45 @@
       "Non-trainable params: 832\n",
       "_________________________________________________________________\n",
       "Epoch 1/20\n",
-      "16/16 [==============================] - 3s 124ms/step - loss: 0.2319\n",
+      "16/16 [==============================] - 4s 130ms/step - loss: 0.2231\n",
       "Epoch 2/20\n",
-      "16/16 [==============================] - 2s 125ms/step - loss: 0.1210\n",
+      "16/16 [==============================] - 2s 128ms/step - loss: 0.1176\n",
       "Epoch 3/20\n",
-      "16/16 [==============================] - 2s 124ms/step - loss: 0.0935\n",
+      "16/16 [==============================] - 2s 127ms/step - loss: 0.0921\n",
       "Epoch 4/20\n",
-      "16/16 [==============================] - 2s 126ms/step - loss: 0.0837\n",
+      "16/16 [==============================] - 2s 130ms/step - loss: 0.0847\n",
       "Epoch 5/20\n",
-      "16/16 [==============================] - 2s 123ms/step - loss: 0.0800\n",
+      "16/16 [==============================] - 2s 148ms/step - loss: 0.0790\n",
       "Epoch 6/20\n",
-      "16/16 [==============================] - 2s 123ms/step - loss: 0.0745\n",
+      "16/16 [==============================] - 2s 158ms/step - loss: 0.0717\n",
       "Epoch 7/20\n",
-      "16/16 [==============================] - 2s 123ms/step - loss: 0.0718\n",
+      "16/16 [==============================] - 3s 161ms/step - loss: 0.0721\n",
       "Epoch 8/20\n",
-      "16/16 [==============================] - 2s 124ms/step - loss: 0.0707\n",
+      "16/16 [==============================] - 3s 158ms/step - loss: 0.0694\n",
       "Epoch 9/20\n",
-      "16/16 [==============================] - 2s 117ms/step - loss: 0.0667\n",
+      "16/16 [==============================] - 2s 155ms/step - loss: 0.0683\n",
       "Epoch 10/20\n",
-      "16/16 [==============================] - 2s 118ms/step - loss: 0.0671\n",
+      "16/16 [==============================] - 2s 141ms/step - loss: 0.0651\n",
       "Epoch 11/20\n",
-      "16/16 [==============================] - 2s 122ms/step - loss: 0.0656\n",
+      "16/16 [==============================] - 2s 146ms/step - loss: 0.0641\n",
       "Epoch 12/20\n",
-      "16/16 [==============================] - 2s 138ms/step - loss: 0.0662\n",
+      "16/16 [==============================] - 2s 136ms/step - loss: 0.0637\n",
       "Epoch 13/20\n",
-      "16/16 [==============================] - 2s 138ms/step - loss: 0.0653\n",
+      "16/16 [==============================] - 2s 141ms/step - loss: 0.0615\n",
       "Epoch 14/20\n",
-      "16/16 [==============================] - 2s 139ms/step - loss: 0.0640\n",
+      "16/16 [==============================] - 3s 159ms/step - loss: 0.0610\n",
       "Epoch 15/20\n",
-      "16/16 [==============================] - 2s 132ms/step - loss: 0.0605\n",
+      "16/16 [==============================] - 3s 198ms/step - loss: 0.0601\n",
       "Epoch 16/20\n",
-      "16/16 [==============================] - 2s 118ms/step - loss: 0.0597\n",
+      "16/16 [==============================] - 3s 212ms/step - loss: 0.0571\n",
       "Epoch 17/20\n",
-      "16/16 [==============================] - 2s 130ms/step - loss: 0.0604\n",
+      "16/16 [==============================] - 3s 195ms/step - loss: 0.0563\n",
       "Epoch 18/20\n",
-      "16/16 [==============================] - 2s 123ms/step - loss: 0.0580\n",
+      "16/16 [==============================] - 3s 164ms/step - loss: 0.0558\n",
       "Epoch 19/20\n",
-      "16/16 [==============================] - 2s 132ms/step - loss: 0.0596\n",
+      "16/16 [==============================] - 4s 224ms/step - loss: 0.0605\n",
       "Epoch 20/20\n",
-      "16/16 [==============================] - 2s 136ms/step - loss: 0.0589\n"
+      "16/16 [==============================] - 4s 258ms/step - loss: 0.0571\n"
      ]
     }
    ],
@@ -196,6 +196,142 @@
     "# if __name__ == \"__main__\":\n",
     "x_train, _, _, _ = load_mnist()\n",
     "autoencoder = train(x_train[:500], LEARNING_RATE, BATCH_SIZE, NUM_EPOCHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "disturbed-conservative",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"encoder\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "encoder_input (InputLayer)   [(None, 28, 28, 1)]       0         \n",
+      "_________________________________________________________________\n",
+      "encoder_conv_layer_1 (Conv2D (None, 28, 28, 32)        320       \n",
+      "_________________________________________________________________\n",
+      "encoder_relu_1 (ReLU)        (None, 28, 28, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "encoder_bn_1 (BatchNormaliza (None, 28, 28, 32)        128       \n",
+      "_________________________________________________________________\n",
+      "encoder_conv_layer_2 (Conv2D (None, 14, 14, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "encoder_relu_2 (ReLU)        (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "encoder_bn_2 (BatchNormaliza (None, 14, 14, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "encoder_conv_layer_3 (Conv2D (None, 7, 7, 64)          36928     \n",
+      "_________________________________________________________________\n",
+      "encoder_relu_3 (ReLU)        (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "encoder_bn_3 (BatchNormaliza (None, 7, 7, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "encoder_conv_layer_4 (Conv2D (None, 7, 7, 64)          36928     \n",
+      "_________________________________________________________________\n",
+      "encoder_relu_4 (ReLU)        (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "encoder_bn_4 (BatchNormaliza (None, 7, 7, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "flatten_3 (Flatten)          (None, 3136)              0         \n",
+      "_________________________________________________________________\n",
+      "encoder_output (Dense)       (None, 2)                 6274      \n",
+      "=================================================================\n",
+      "Total params: 99,842\n",
+      "Trainable params: 99,394\n",
+      "Non-trainable params: 448\n",
+      "_________________________________________________________________\n",
+      "Model: \"decoder\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "decoder_input (InputLayer)   [(None, 2)]               0         \n",
+      "_________________________________________________________________\n",
+      "decoder_dense (Dense)        (None, 3136)              9408      \n",
+      "_________________________________________________________________\n",
+      "reshape_3 (Reshape)          (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 7, 7, 64)          36928     \n",
+      "_________________________________________________________________\n",
+      "decoder_relu_1 (ReLU)        (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "decoder_bn_1 (BatchNormaliza (None, 7, 7, 64)          256       \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 14, 14, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "decoder_relu_2 (ReLU)        (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "decoder_bn_2 (BatchNormaliza (None, 14, 14, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 28, 28, 64)        36928     \n",
+      "_________________________________________________________________\n",
+      "decoder_relu_3 (ReLU)        (None, 28, 28, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "decoder_bn_3 (BatchNormaliza (None, 28, 28, 64)        256       \n",
+      "_________________________________________________________________\n",
+      "decoder_conv_transpose_layer (None, 28, 28, 1)         577       \n",
+      "_________________________________________________________________\n",
+      "sigmoid_layer (Activation)   (None, 28, 28, 1)         0         \n",
+      "=================================================================\n",
+      "Total params: 121,537\n",
+      "Trainable params: 121,153\n",
+      "Non-trainable params: 384\n",
+      "_________________________________________________________________\n",
+      "Model: \"autoencoder\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "encoder_input (InputLayer)   [(None, 28, 28, 1)]       0         \n",
+      "_________________________________________________________________\n",
+      "encoder (Functional)         (None, 2)                 99842     \n",
+      "_________________________________________________________________\n",
+      "decoder (Functional)         (None, 28, 28, 1)         121537    \n",
+      "=================================================================\n",
+      "Total params: 221,379\n",
+      "Trainable params: 220,547\n",
+      "Non-trainable params: 832\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save and re-load the AE model\n",
+    "autoencoder.save(\"model\")\n",
+    "autoencoder2 = Autoencoder.load(\"model\")\n",
+    "autoencoder2.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "behind-force",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is Windows\n",
+      " Volume Serial Number is 9CC7-16F7\n",
+      "\n",
+      " Directory of C:\\Users\\pbeata\\Desktop\\Data_Science\\Audio\\sound-generation\\source\\model\n",
+      "\n",
+      "07/26/2022  11:44    <DIR>          .\n",
+      "07/26/2022  11:52    <DIR>          ..\n",
+      "07/26/2022  11:47                59 parameters.pkl\n",
+      "07/26/2022  11:47           928,128 weights.h5\n",
+      "               2 File(s)        928,187 bytes\n",
+      "               2 Dir(s)  41,593,176,064 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls \"./model/\""
    ]
   }
  ],
