update the autoencoder class and the training notebook for the vanilla AE

--- a/source/train.ipynb
+++ b/source/train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "educated-marsh",
+   "id": "developmental-gender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "racial-lightweight",
+   "id": "invalid-rouge",
    "metadata": {
     "scrolled": false
    },
@@ -37,6 +37,7 @@
     "    x_test = x_test.reshape(x_test.shape + (1,))\n",
     "    return x_train, y_train, x_test, y_test\n",
     "\n",
+    "\n",
     "def train(x_train, learning_rate, batch_size, num_epochs):\n",
     "    autoencoder = Autoencoder(\n",
     "        input_shape=(28, 28, 1),\n",
@@ -53,8 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "formed-canvas",
+   "execution_count": 13,
+   "id": "naked-check",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +92,7 @@
       "_________________________________________________________________\n",
       "encoder_bn_4 (BatchNormaliza (None, 7, 7, 64)          256       \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 3136)              0         \n",
+      "flatten_4 (Flatten)          (None, 3136)              0         \n",
       "_________________________________________________________________\n",
       "encoder_output (Dense)       (None, 2)                 6274      \n",
       "=================================================================\n",
@@ -107,7 +108,7 @@
       "_________________________________________________________________\n",
       "decoder_dense (Dense)        (None, 3136)              9408      \n",
       "_________________________________________________________________\n",
-      "reshape_2 (Reshape)          (None, 7, 7, 64)          0         \n",
+      "reshape_4 (Reshape)          (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
       "decoder_conv_transpose_layer (None, 7, 7, 64)          36928     \n",
       "_________________________________________________________________\n",
@@ -150,58 +151,59 @@
       "Non-trainable params: 832\n",
       "_________________________________________________________________\n",
       "Epoch 1/20\n",
-      "16/16 [==============================] - 4s 130ms/step - loss: 0.2231\n",
+      "313/313 [==============================] - 54s 165ms/step - loss: 0.1081\n",
       "Epoch 2/20\n",
-      "16/16 [==============================] - 2s 128ms/step - loss: 0.1176\n",
+      "313/313 [==============================] - 52s 167ms/step - loss: 0.0598\n",
       "Epoch 3/20\n",
-      "16/16 [==============================] - 2s 127ms/step - loss: 0.0921\n",
+      "313/313 [==============================] - 49s 156ms/step - loss: 0.0569\n",
       "Epoch 4/20\n",
-      "16/16 [==============================] - 2s 130ms/step - loss: 0.0847\n",
+      "313/313 [==============================] - 55s 174ms/step - loss: 0.0512\n",
       "Epoch 5/20\n",
-      "16/16 [==============================] - 2s 148ms/step - loss: 0.0790\n",
+      "313/313 [==============================] - 63s 202ms/step - loss: 0.0499\n",
       "Epoch 6/20\n",
-      "16/16 [==============================] - 2s 158ms/step - loss: 0.0717\n",
+      "313/313 [==============================] - 63s 200ms/step - loss: 0.0479\n",
       "Epoch 7/20\n",
-      "16/16 [==============================] - 3s 161ms/step - loss: 0.0721\n",
+      "313/313 [==============================] - 50s 161ms/step - loss: 0.0464\n",
       "Epoch 8/20\n",
-      "16/16 [==============================] - 3s 158ms/step - loss: 0.0694\n",
+      "313/313 [==============================] - 55s 176ms/step - loss: 0.0455\n",
       "Epoch 9/20\n",
-      "16/16 [==============================] - 2s 155ms/step - loss: 0.0683\n",
+      "313/313 [==============================] - 57s 183ms/step - loss: 0.0446\n",
       "Epoch 10/20\n",
-      "16/16 [==============================] - 2s 141ms/step - loss: 0.0651\n",
+      "313/313 [==============================] - 59s 187ms/step - loss: 0.0438\n",
       "Epoch 11/20\n",
-      "16/16 [==============================] - 2s 146ms/step - loss: 0.0641\n",
+      "313/313 [==============================] - 61s 193ms/step - loss: 0.0436\n",
       "Epoch 12/20\n",
-      "16/16 [==============================] - 2s 136ms/step - loss: 0.0637\n",
+      "313/313 [==============================] - 61s 194ms/step - loss: 0.0429\n",
       "Epoch 13/20\n",
-      "16/16 [==============================] - 2s 141ms/step - loss: 0.0615\n",
+      "313/313 [==============================] - 66s 210ms/step - loss: 0.0427\n",
       "Epoch 14/20\n",
-      "16/16 [==============================] - 3s 159ms/step - loss: 0.0610\n",
+      "313/313 [==============================] - 59s 188ms/step - loss: 0.0421\n",
       "Epoch 15/20\n",
-      "16/16 [==============================] - 3s 198ms/step - loss: 0.0601\n",
+      "313/313 [==============================] - 58s 186ms/step - loss: 0.0418\n",
       "Epoch 16/20\n",
-      "16/16 [==============================] - 3s 212ms/step - loss: 0.0571\n",
+      "313/313 [==============================] - 63s 200ms/step - loss: 0.0413\n",
       "Epoch 17/20\n",
-      "16/16 [==============================] - 3s 195ms/step - loss: 0.0563\n",
+      "313/313 [==============================] - 59s 189ms/step - loss: 0.0409\n",
       "Epoch 18/20\n",
-      "16/16 [==============================] - 3s 164ms/step - loss: 0.0558\n",
+      "313/313 [==============================] - 55s 176ms/step - loss: 0.0408\n",
       "Epoch 19/20\n",
-      "16/16 [==============================] - 4s 224ms/step - loss: 0.0605\n",
+      "313/313 [==============================] - 47s 151ms/step - loss: 0.0408\n",
       "Epoch 20/20\n",
-      "16/16 [==============================] - 4s 258ms/step - loss: 0.0571\n"
+      "313/313 [==============================] - 49s 155ms/step - loss: 0.0402\n"
      ]
     }
    ],
    "source": [
     "# if __name__ == \"__main__\":\n",
+    "num_samples = 10_000\n",
     "x_train, _, _, _ = load_mnist()\n",
-    "autoencoder = train(x_train[:500], LEARNING_RATE, BATCH_SIZE, NUM_EPOCHS)"
+    "autoencoder = train(x_train[:num_samples], LEARNING_RATE, BATCH_SIZE, NUM_EPOCHS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "disturbed-conservative",
+   "execution_count": 18,
+   "id": "secure-regard",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +240,7 @@
       "_________________________________________________________________\n",
       "encoder_bn_4 (BatchNormaliza (None, 7, 7, 64)          256       \n",
       "_________________________________________________________________\n",
-      "flatten_3 (Flatten)          (None, 3136)              0         \n",
+      "flatten_6 (Flatten)          (None, 3136)              0         \n",
       "_________________________________________________________________\n",
       "encoder_output (Dense)       (None, 2)                 6274      \n",
       "=================================================================\n",
@@ -254,7 +256,7 @@
       "_________________________________________________________________\n",
       "decoder_dense (Dense)        (None, 3136)              9408      \n",
       "_________________________________________________________________\n",
-      "reshape_3 (Reshape)          (None, 7, 7, 64)          0         \n",
+      "reshape_6 (Reshape)          (None, 7, 7, 64)          0         \n",
       "_________________________________________________________________\n",
       "decoder_conv_transpose_layer (None, 7, 7, 64)          36928     \n",
       "_________________________________________________________________\n",
@@ -301,37 +303,10 @@
    ],
    "source": [
     "# save and re-load the AE model\n",
-    "autoencoder.save(\"model\")\n",
-    "autoencoder2 = Autoencoder.load(\"model\")\n",
+    "folder_path = \"../trained_models/ae_model/\"\n",
+    "autoencoder.save(folder_path)\n",
+    "autoencoder2 = Autoencoder.load(folder_path)\n",
     "autoencoder2.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "behind-force",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Volume in drive C is Windows\n",
-      " Volume Serial Number is 9CC7-16F7\n",
-      "\n",
-      " Directory of C:\\Users\\pbeata\\Desktop\\Data_Science\\Audio\\sound-generation\\source\\model\n",
-      "\n",
-      "07/26/2022  11:44    <DIR>          .\n",
-      "07/26/2022  11:52    <DIR>          ..\n",
-      "07/26/2022  11:47                59 parameters.pkl\n",
-      "07/26/2022  11:47           928,128 weights.h5\n",
-      "               2 File(s)        928,187 bytes\n",
-      "               2 Dir(s)  41,593,176,064 bytes free\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls \"./model/\""
    ]
   }
  ],
